# OptMixAgents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  dataset.csv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: analyst.agent.yaml  modeler.agent.yaml  optimizer.agent.yaml  orchestrator.agent.yaml  reporter.agent.yaml  strategist.agent.yaml
checklists/: data-readiness.md  model-validation.md
examples/: quickstart.py
knowledge/: channel-taxonomy.yaml  industry-benchmarks.yaml
optmix/: __init__.py
optmix/agents/: schema.py
optmix/cli/: main.py
optmix/core/: __init__.py  config.py  executor.py  llm.py  orchestrator.py  state.py  team.py  workflow_engine.py
optmix/data/: samples.py
optmix/mmm/models/: __init__.py  base.py  bayesian_mmm.py  ridge_mmm.py
optmix/mmm/optimizer/: budget_optimizer.py
optmix/mmm/transforms/: adstock.py  saturation.py
optmix/tools/: __init__.py  data_tools.py  mmm_tools.py  optimization_tools.py  registry.py  report_tools.py  strategy_tools.py
templates/: executive-report.md  measurement-brief.md
tests/: test_bayesian_mmm.py  test_cli_setup.py  test_config.py  test_core.py  test_delegation.py  test_executor.py  test_openai_client.py  test_orchestrator.py  test_state.py  test_team.py  test_tools.py  test_workflow_engine.py
workflows/: full_measurement_cycle.yaml  quick_optimization.yaml
